[package]
name = "rtc-mono-bug-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
atsamd-hal = { version = "0.23.2", features = ["samd51j", "samd51j-rt", "rtic"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
critical-section = "1.2.0"
panic-halt = "1"
rtic = { version = "2.2.0", features = ["cortex-m", "thumbv7-backend"] }
rtt-target = "0.6.2"
 
# Point at the fork to see bug fix in action
# [patch.crates-io]
# atsamd-hal = { path = "../atsamd/hal" }

[features]
default = []
workaround = []

[profile.dev]
panic = "abort"
lto = true
opt-level = "z"
